# dragonflow

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  1  CONTRIBUTING.rst  Dockerfile  Dockerfile.fedora  HACKING.rst  README.md  README.rst  Vagrantfile  dragonflow.zuul.yaml  empty  lower-constraints.txt  neutron-l3-controller-agent  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  wj.txt  wj1.txt
.testrepository/: 0  failing
devstack/: cassandra_driver  db-ext-services.sh  devstackgaterc  devstackgaterc-common  devstackgaterc-etcd  devstackgaterc-etcd-zmq  devstackgaterc-fullstack-common  devstackgaterc-fullstack-etcd-zmq  devstackgaterc-fullstack-redis  devstackgaterc-grenade-etcd  devstackgaterc-rally-redis  devstackgaterc-redis  devstackgaterc-redis-rally  devstackgaterc-redis-tempest  devstackgaterc-tempest-redis  devstackgaterc-zmq  df-ext-services.sh  etcd.conf  etcd.service  etcd.service.conf  etcd_driver  etcd_pubsub_driver  functions.sh  override-defaults  ovs_dpdk  ovs_dpdk_setup.sh  ovs_manager.sh  ovs_setup.sh  plugin.sh  ramcloud_driver  redis_driver  redis_pubsub_driver  rethinkdb_driver  settings  tempest-filter  zmq_pubsub_driver  zmq_service_driver  zookeeper.service.fedora  zookeeper.service.ubuntu  zookeeper_driver
devstack/provisioning/: setup-base.sh  setup-compute.sh  virtualbox.conf.yml
devstack/upgrade/: settings  shutdown.sh  upgrade.sh
doc/: requirements.txt
doc/images/: pubsub_neutron_API_server.graphml  pubsub_topology.graphml
doc/source/: centralized_dragonflow.rst  conf.py  configuration.rst  containers.rst  distributed_dhcp.rst  distributed_dragonflow.rst  docker_install.rst  features.rst  gmr.rst  index.rst  installation.rst  l3_controller.patch  local.conf  manual_deployment.rst  osprofiler.rst  pipeline.rst  pluggable_db.rst  pluggable_pubsub.rst  readme.rst  releasenotes.rst  releasenotes_create.rst  reviewers_guide.rst  tap_service.rst  testing_and_debugging.rst  usage.rst
doc/source/cli/: dragonflow-status.rst  index.rst
doc/source/devref/: models.rst
doc/source/devrefs/: index.rst  models.rst
doc/source/specs/: api.rst  (+73 more)
dragonflow/: __init__.py  _i18n.py  bloomfilter.py  opts.py  version.py
dragonflow/cli/: datapath_to_dot.py  datapath_to_odt.py  df_db.py  df_model.py  df_model.py.orig  utils.py
dragonflow/cmd/: df_skydive_service.py  status.py
dragonflow/cni/: simple_ipam.py
dragonflow/common/: common_params.py  constants.py  dhcp.py  exceptions.py  extensions.py  helpers.py  net_utils.py  periodic_tasks.py  profiler.py  report_status.py  utils.py
dragonflow/conf/: __init__.py  df_active_port_detection.py  df_bgp.py  df_cassandra.py  df_classifier_app.py  df_common_params.py  df_connector.py  df_dhcp.py  df_dnat.py  df_l2.py  df_l3.py  df_loadbalancer.py  df_metadata_service.py  df_os_ken.py  df_provider_networks.py  df_pub_sub.py  df_redis.py  df_rethinkdb.py  df_ryu.py  df_skydive.py  df_snat.py  df_tunneling.py  df_zmq.py  df_zmq_pubsub.py  l2_ml2.py  l2_ml2_app.py  opts.py  router_distributed.py
dragonflow/controller/: active_port_detection_app.py  aging.py  aging_app.py  allowed_address_pairs_app.py  app_base.py  app_wiring.py  base_controller.py  base_snat_app.py  bridge_connector_app.py  chassis_snat_app.py  classifier_app.py  datapath.py  datapath_layout.py  df_base_abc.py  df_base_app.py  df_bgp_service.py  df_config.py  df_db_notifier.py  df_db_objects_refresh.py  df_local_controller.py  df_publisher_service.py  dhcp_app.py  dispatcher.py  dnat_app.py  fake_vif_app.py  fc_app.py  l2_app.py  l2_ml2_app.py  l3_app.py  l3_app_base.py  l3_openflow_app.py  l3_proactive_app.py  metadata_service_app.py  migration_app.py  ofswitch.py  openflow_controller.py  port_locator.py  portqos_app.py  portsec_app.py  provider_networks_app.py  (+11 more)
dragonflow/db/: api_nb.py  api_vswitch.py  crud.py  db_api.py  db_common.py  db_consistent.py  db_impl_ovsdb.py  db_interface.py  db_models.py  db_publisher.py  db_store.py  db_store2.py  db_store_tenat_based.py  db_subscriber.py  df_db.py  field_types.py  migration.py  model_framework.py  model_proxy.py  models.py  models2.py  models3.py  models_sfc.py  neutron_df_db_sync.py  neutron_notifier_api.py  port_status.py  port_status_api.py  pub_sub_api.py  pubsub.py  sync.py  versioned_obj.py
dragonflow/neutron/: dhcp_notifiers.py  plugin.py  sfc_driver.py
dragonflow/ovsdb/: commands.py  impl_idl.py  objects.py  patch_mapping.py  vswitch_impl.py
dragonflow/tests/: base.py  test_dragonflow.py
dragonflow/utils/: bloomfilter.py  conntrack.py  namespace.py  radix_tree.py
etc/: dragonflow_datapath_layout.yaml
etc/oslo-config-generator/: dragonflow.ini
etc/standalone/: dragonflow.ini
openstack/: requirements
ovn-patch/: commands.py  impl_idl_ovn.py  ovn-nb.ovsschema  ovn-nb.xml  ovn_api.py  plugin.py
rally-jobs/: README.rst  dragonflow.yaml
rally-jobs/plugins/: README.rst
rally-private-gate/: README.rst
releasenotes/notes/: dragonflow-status-upgrade-check-framework-efd2592c6decdd16.yaml  osprofiler-97302fc3440b4fd9.yaml  started-using-reno-57feaf66a19a01f0.yaml  support-zookeeper-48a082d4e63026df.yaml  traceroute-support-18e959fd88f15da7.yaml
releasenotes/source/: Makefile  README.rst  conf.py  index.rst  make.bat  pike.rst
tools/: add_table_names  add_table_names.awk  check_test_structure.sh  create_add_tables_script.sh  deploy_rootwrap.sh  df-ovs-flow-dumper.py  fix-openstack-quotas.py  ovs_metadata_service_deployment.sh  pretty_tox.sh  run_dragonflow.sh  subunit-trace.py  tox_install.sh  tox_install_project.sh
vagrant/: Vagrantfile
vagrant/provisioning/: dragonflow.conf.yml  setup-aio.sh  setup-base.sh  setup-compute.sh  setup-controller.sh  virtualbox.conf.yml
zuul/dragonflow-dsvm-fullstack/: run.yaml
zuul/dragonflow-dsvm-fullstack-etcd-zmq/: run.yaml
zuul/dragonflow-dsvm-fullstack-redis/: run.yaml
zuul/dragonflow-dsvm-fullstack-zmq/: run.yaml
zuul/dragonflow-dsvm-rally/: post.yaml  run.yaml
zuul/dragonflow-grenade/: run.yaml
zuul/tempest-dsvm-dragonflow/: run.yaml
(+393 files in other folders)
