[metadata]
name = dragonflow
summary = SDN based Virtual Router add-on for Neutron OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    dragonflow

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = dragonflow/locale
domain = dragonflow

[update_catalog]
domain = dragonflow
output_dir = dragonflow/locale
input_file = dragonflow/locale/dragonflow.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = dragonflow/locale/dragonflow.pot


[entry_points]
neutron.ml2.mechanism_drivers =
    df = dragonflow.neutron.ml2.mech_driver:DFMechDriver
neutron.db.alembic_migrations =
    dragonflow = dragonflow.db.neutron.migration:alembic_migrations
console_scripts =
    df-db = dragonflow.cli.df_db:main
dragonflow.pubsub_driver =
    zmq_pubsub_driver = dragonflow.db.pubsub_drivers.zmq_pubsub_driver:ZMQPubSub
    zmq_pubsub_multiproc_driver = dragonflow.db.pubsub_drivers.zmq_pubsub_driver:ZMQPubSubMultiproc
